--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -107,7 +107,7 @@ $escaped-characters: (('<', '%3c'), ('>', '%3e'), ('#', '%23'), ('(', '%28'), ('
 
 $enable-caret: true !default;
 $enable-rounded: true;
-$enable-shadows: true;
+$enable-shadows: false;
 $enable-gradients: true;
 $enable-transitions: true !default;
 $enable-prefers-reduced-motion-media-query: true !default;
