menu implememnted for mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import './styles/variables';
 
 @import '../node_modules/bootstrap/scss/bootstrap';
+@import './styles/hamburger/hamburgers';
 
 @import './styles/global.styling';
 @import './styles/header';
