--- a/src/components/Header/NavBar/NavBar.module.scss
+++ b/src/components/Header/NavBar/NavBar.module.scss
@@ -1,10 +1,19 @@
 @import '../../../styles/variables';
+@import '../../../../node_modules/bootstrap/scss/functions';
+@import '../../../../node_modules/bootstrap/scss/variables';
+@import '../../../../node_modules/bootstrap/scss/mixins';
 
-.LanguageBar {
-    margin: 0;
-    padding: 0;
+.navbarNav {
+    justify-content: space-between;
+    flex: 1;
 }
 
-.navbarCollapse {
-    justify-content: space-between;
+.navbarToggler {
+    padding: 0;
+    border: none;
+    border-radius: 0;
+
+    @include media-breakpoint-down(md) {
+        //   background: salmon;
+    }
 }
