--- a/src/styles/_global.styling.scss
+++ b/src/styles/_global.styling.scss
@@ -1,3 +1,10 @@
+html,
+body {
+    height: 100%;
+}
+#root {
+    height: 100%;
+}
 .rtl {
     direction: rtl;
     text-align: right;
@@ -5,4 +12,13 @@
 .ltr {
     direction: ltr;
     text-align: left;
+}
+.content-container {
+    padding-top: 60px;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
