--- a/src/components/Header/NavBar/NavBar.module.scss
+++ b/src/components/Header/NavBar/NavBar.module.scss
@@ -12,8 +12,36 @@
     padding: 0;
     border: none;
     border-radius: 0;
+}
 
+.collapsing {
     @include media-breakpoint-down(md) {
-        //   background: salmon;
+        height: auto;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.7s ease-in-out;
+
+        &.show {
+            max-height: 500px;
+        }
+    }
+}
+
+.langBtn {
+    color: $primary;
+    display: flex;
+
+    &.en {
+        padding-right: 30px;
+        @include media-breakpoint-down(md) {
+            padding-right: 0;
+        }
+    }
+
+    &.he {
+        padding-left: 30px;
+        @include media-breakpoint-down(md) {
+            padding-left: 0;
+        }
     }
 }
