--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,4 +1,6 @@
 .navbar-light {
+    background: $gray-200;
+    box-shadow: 0px 3px 6px #00000029;
     .navbar-nav {
         .nav-link {
             transition: color 0.3s;
