--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,7 @@
 
 $white: #fff;
 $gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
+$gray-200: #f6f6f6;
 $gray-300: #e9e9e9;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
