--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,21 +2,30 @@
     background: $gray-200;
     box-shadow: 0px 3px 6px #00000029;
     .navbar-nav {
-        .nav-link {
-            transition: color 0.3s;
-            &:after {
-                content: '';
-                display: block;
-                width: 100%;
-                height: 2px;
-                background-color: transparent;
-                transition: background-color 1s ease-in-out 0.1s;
-            }
+        @include media-breakpoint-down(md) {
+            padding: 5px;
+        }
 
-            &.active {
-                color: $primary;
+        .nav-item {
+            @include media-breakpoint-down(md) {
+                display: flex;
+            }
+            .nav-link {
+                transition: color 0.3s;
                 &:after {
-                    background-color: $danger;
+                    content: '';
+                    display: block;
+                    width: 100%;
+                    height: 2px;
+                    background-color: transparent;
+                    transition: background-color 1s ease-in-out 0.1s;
+                }
+
+                &.active {
+                    color: $primary;
+                    &:after {
+                        background-color: $danger;
+                    }
                 }
             }
         }
